add remote repository as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "secondChild"]
 	path = secondChild
 	url = https://github.com/yangyanqiu/practiceSubmodule.git/secondChild.git
+[submodule "Demo"]
+	path = Demo
+	url = https://github.com/yangyanqiu/practiceSubmodule.git/demo.git
